--- a/Project -purplle.com/app.html
+++ b/Project -purplle.com/app.html
@@ -135,8 +135,8 @@
                 <h2>2 Million downloads are not enough</h2>
                 <p>Download the Mauve App</p>
                 <div>
-                    <img src="https://media6.ppl-media.com/mediafiles/ecomm/home/1543587824_google-play.png" alt="">
-                    <img src="https://media6.ppl-media.com/mediafiles/ecomm/home/1543587827_apple-store.png" alt="">
+                    <a href="https://play.google.com/store/apps/details?id=com.manash.purplle&pli=1"><img src="https://media6.ppl-media.com/mediafiles/ecomm/home/1543587824_google-play.png" alt=""></a>
+                    <a href="https://apps.apple.com/in/app/purplle-beauty-friend-forever/id1078972948"><img src="https://media6.ppl-media.com/mediafiles/ecomm/home/1543587827_apple-store.png" alt=""></a>
                 </div>
                 <br>
                 <img id="QR" src="https://media6.ppl-media.com/mediafiles/ecomm/home/1543587825_qr-code.png" alt="">
