Finalized version of Purplle.com Project

--- a/Project -purplle.com/productsall.html
+++ b/Project -purplle.com/productsall.html
@@ -13,7 +13,7 @@
 <body>
     <div class="advertisement">
         <div>
-            <a href="./home.html"><img
+            <a href="./index.html"><img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtUhmYiQ4CqfAq2pyp4xmp4jiILGXU2eTYvw&usqp=CAU"
                     alt=""></a>
             <p>⭐⭐FLAT Rs. 100 OFF on your first order! ⭐⭐</p>
@@ -34,7 +34,7 @@
     <div class="iconbox">
         <div id="icon_cont">
             <input type="text" id="search_nav" placeholder="What are you looking for?">
-            <a href="./home.html"><img id="logo" src="./take 1.jpg-1.jpg" alt="Image Not Found"></a>
+            <a href="./index.html"><img id="logo" src="./take 1.jpg-1.jpg" alt="Image Not Found"></a>
             <div>
                 <button><img src="https://cdn-icons-png.flaticon.com/128/1077/1077035.png" alt=""></button>
                 <button><img src="https://cdn-icons-png.flaticon.com/128/3502/3502458.png" alt=""></button>
