--- a/Project -purplle.com/cart.html
+++ b/Project -purplle.com/cart.html
@@ -14,7 +14,7 @@
 <body>
     <div class="advertisement">
         <div>
-            <a href="./home.html"><img
+            <a href="./index.html"><img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtUhmYiQ4CqfAq2pyp4xmp4jiILGXU2eTYvw&usqp=CAU"
                     alt=""></a>
             <p>⭐⭐FLAT Rs. 100 OFF on your first order! ⭐⭐</p>
@@ -25,7 +25,7 @@
     </div>
     <div class="iconbox">
         <div id="icon_cont">
-            <a href="./home.html"><img id="logo" src="./take 1.jpg-1.jpg" alt="Image Not Found"></a>
+            <a href="./index.html"><img id="logo" src="./take 1.jpg-1.jpg" alt="Image Not Found"></a>
             <div>
                 <button><input type="text" placeholder="type something..." id="search"> <i class="fa-solid fa-magnifying-glass"></i></button>
                 <button><i class="fa-solid fa-heart"></i></button>
@@ -63,15 +63,17 @@
                 </div>
                 <div class="row">
                     <h1><i class="fa-solid fa-square-check fa-beat-fade" style="color: #000000;"></i>You are missing out!</h1>
-                    <button>JOIN ELITE TODAY</button>
+                    <button id="elitebtn">JOIN ELITE TODAY</button>
                 </div>
                 <div class="row">
                     <h1><i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #fa00cc;"></i>Cart price dropped by 4%</h1>
                     <button>View all</button>
                 </div>
+                <br>
                 <div class="products">
                     <!-- append here  -->
                 </div>
+                <a href="./productsall.html" id="backtoproductpage">Back to Product Page</a>
             </div>
             <div class="right">
                 <div class="firstr">
@@ -93,6 +95,13 @@
                     <h1 id="pricecount">0</h1>
                 </div>
                 <button id="placeorder">PLACE ORDER</button>
+                <div id="ordersuccessful">
+                    <h2>Your order has been recieved and is being processed my our team</h2>
+                    <p>Don't Forget to Check Out Our Other Products!</p>
+                    <a href="./productsall.html">View all</a>
+                    <br>
+                    <button id="orderclose">Close</button>
+                </div>
                 <p>Need help? Call AK @9686315358</p>
             </div>
         </div>
